# tent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Jenkinsfile  Jenkinsfile.prod  Jenkinsfile.staging  PR-48-re-review-comment.md  README.md  T-25.md  couchdb-session-example.ini  docker-compose.production.no-nginx.yml  docker-compose.production.yml  docker-compose.seed.yml  docker-compose.staging.no-nginx.yml  docker-compose.staging.yml  docker-compose.unseed.yml  docker-compose.yml  lefthook.yml  package.json  pnpm-lock.yaml  pyproject.toml
backend/: .cursorrules  .gitignore  Dockerfile  README.md  pyproject.toml
backend/.agents/rules/: TESTING.md  beanie-fastapi-rules.md
backend/.github/.instructions/: fastapi.instructions.md
backend/apiapp/: run.py
backend/apiapp/arq_stub/: __init__.py  server.py  tasks.py
backend/apiapp/cmd/: api.py  controller.py
backend/apiapp/controllers/: __init__.py  server.py
backend/apiapp/core/: base_schemas.py  base_use_case.py  config.py  exceptions.py  http_error.py  router.py  security.py  validation_error.py
backend/apiapp/infrastructure/: database.py  gridfs.py
backend/apiapp/middlewares/: base.py  cors.py  security.py  timing.py
backend/apiapp/modules/: __init__.py
backend/apiapp/modules/auth/: router.py  schemas.py  use_case.py
backend/apiapp/modules/config/: router.py  schemas.py  use_case.py
backend/apiapp/modules/donation/: __init__.py  model.py  router.py  schemas.py  (+1 more)
backend/apiapp/utils/: logging.py  masking.py  request_logs.py  request_meta.py  search_query.py  ulid.py
backend/apiapp/worker/: __init__.py  server.py  tasks.py
backend/cli/: README.md  main.py
backend/cli/templates/: model.py.j2  router.py.j2  schemas.py.j2  use_case.py.j2
backend/docs/: usecase-pattern.md
backend/scripts/: README.md  init-admin  run-controller  run-dev  run-prod  run-worker
backend/tests/: conftest.py  test_auth_refresh.py  test_donations.py  test_evacuee.py  test_external_secret.py  test_health.py  test_masking.py  test_search_query.py  test_shelter.py  test_ulid.py  test_user_unit.py
worker/: Dockerfile  pyproject.toml
worker/src/worker/: config.py  main.py  masking.py
worker/tests/: test_couch_client.py  test_processor.py  test_retention.py  test_search_audit_inbound.py
worker/tests/integration/: test_projection_contract.py
worker/tests/projectors/: __init__.py  test_projectors.py
(+1069 files in other folders)
