[tool.poetry]
name = "smart-shelter-backend"
version = "0.1.0"
description = "FastAPI Backend for Smart Shelter Public Plane API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "apiapp"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
motor = "^3.2.0"
pydantic = "^2.0"
pydantic-settings = "^2.0"
dnspython = "^2.0"
loguru = "^0.7.0"

[tool.poetry.scripts]
run-dev = "uvicorn apiapp.main:app --reload --host 0.0.0.0 --port 9000"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

